# SlicerNeuropacs

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  index.html  style.css  styles.css
NeuropacsScriptedModule/: CMakeLists.txt  NeuropacsScriptedModule.py
NeuropacsScriptedModule/Resources/UI/: NeuropacsScriptedModule.ui
